--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -31,7 +31,7 @@
             android:paddingTop="0sp">
 
             <Button
-                android:id="@+id/cmdOutpatient"
+                android:id="@+id/cmdHHInterview"
                 style="@style/menuButtonStyle"
                 android:layout_width="fill_parent"
                 android:layout_marginBottom="5sp"
@@ -39,36 +39,9 @@
                 android:layout_marginRight="20sp"
                 android:background="@drawable/button_style_gray"
                 android:gravity="center|center_vertical"
-                android:text="Outpatient"
+                android:text="Household Interview"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/cmdLaboratory"
-                style="@style/menuButtonStyle"
-                android:layout_width="fill_parent"
-                android:layout_marginBottom="5sp"
-                android:layout_marginLeft="20sp"
-                android:layout_marginRight="20sp"
-                android:background="@drawable/button_style_gray"
-                android:gravity="center|center_vertical"
-                android:text="Hospital Laboratory"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/cmdLabNetwork"
-                style="@style/menuButtonStyle"
-                android:layout_width="fill_parent"
-                android:layout_marginBottom="5sp"
-                android:layout_marginLeft="20sp"
-                android:layout_marginRight="20sp"
-                android:background="@drawable/button_style_gray"
-                android:gravity="center|center_vertical"
-                android:text="Laboratory Network"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
-
 
             <Button
                 android:id="@+id/cmdDataSync"
