--- a/app/src/main/res/layout/form_heading.xml
+++ b/app/src/main/res/layout/form_heading.xml
@@ -13,13 +13,13 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginTop="20sp"
         android:background="#F3F3F3"
         android:visibility="visible">
 
         <ImageView
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingLeft="10px"
