--- a/app/src/main/res/layout/navigation_drawer.xml
+++ b/app/src/main/res/layout/navigation_drawer.xml
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:scaleType="fitStart"
-                android:src="@drawable/seaplogo_small"/>
+                android:src="@drawable/logo"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="70dp" >
