--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -1,18 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical">
+
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
-        <TextView android:id="@+id/lblHeading" android:text="Household" android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblHeading" android:text="Household List" android:paddingLeft="10sp" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
     </LinearLayout>
+
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
-    <LinearLayout  android:layout_marginTop="5sp" android:layout_width="fill_parent" android:gravity="end" android:layout_height="wrap_content" android:orientation="horizontal">
-        <Button android:id="@+id/btnRefresh"  android:background="@drawable/button_style_blue" android:textSize="18sp" android:textColor="#FFFFFF"
-            android:layout_width="wrap_content" android:layout_height="30sp" android:layout_marginTop="5dip" android:layout_marginBottom="10sp" android:text=" refresh " android:paddingLeft="5sp" android:paddingRight="5sp"/>
-        <Button android:id="@+id/btnAdd" android:layout_marginLeft="20sp" android:layout_marginRight="20sp"  android:textSize="18sp" android:textColor="#FFFFFF"
-            android:background="@drawable/button_style_blue" android:layout_width="wrap_content" android:layout_height="30sp" android:layout_marginTop="5dip" android:layout_marginBottom="10sp" android:text=" + new " android:paddingLeft="5sp" android:paddingRight="5sp"/>
-    </LinearLayout>
+
+    <TableLayout
+        android:id="@+id/firsttab"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:paddingLeft="10sp"
+        android:paddingRight="10sp"
+        android:stretchColumns="1" >
+
+        <TableRow android:gravity="left" android:background="#f3f3f3" android:visibility="gone">
+
+            <TextView android:id="@+id/lblBlock"
+                android:layout_column="0" android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp"
+                android:textSize="25sp" android:gravity="left"
+                android:textColor="#000000"
+                android:text="" android:layout_height="40sp" android:layout_width="0sp"/>
+
+            <TextView android:id="@+id/lblVillageName" android:layout_column="1" android:layout_span="2"
+                android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp" android:layout_marginRight="25sp"
+                android:textSize="25sp" android:gravity="right"
+                android:textColor="#000000"	android:text="lblVillage"/>
+        </TableRow>
+        <TableRow android:gravity="left" android:background="#F3F3F3">
+
+            <TextView android:id="@+id/lblTotalHH"
+                android:layout_column="0" android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp"
+                android:textSize="20sp"
+                android:textColor="#006699"
+                android:text="" android:layout_height="40sp"/>
+
+            <TextView android:id="@+id/lblHHVisited" android:layout_marginLeft="50sp" android:layout_column="1"
+                android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp" android:layout_marginRight="25sp"
+                android:textSize="20sp"
+                android:textColor="#006699"	android:text=""
+                android:layout_width="wrap_content" />
+
+        </TableRow>
+
+        <TableRow android:gravity="left" android:background="#ffffff">
+
+            <TextView
+                android:layout_height="40sp"
+                android:layout_column="0"
+                android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp"
+                android:gravity="left"
+                android:text=" Union"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:id="@+id/spnUnion" android:layout_column="1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:layout_marginRight="10sp"
+                android:drawSelectorOnTop="true"
+                android:prompt="@string/planet_prompt"
+                android:textSize="25sp" />
+
+        </TableRow>
+
+        <TableRow android:gravity="left" android:background="#ffffff">
+
+            <TextView
+                android:layout_height="40sp"
+                android:layout_column="0"
+                android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp"
+                android:gravity="left"
+                android:text=" Village"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:id="@+id/spnVill" android:layout_column="1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:layout_marginRight="10sp"
+                android:drawSelectorOnTop="true"
+                android:prompt="@string/planet_prompt"
+                android:textSize="25sp" />
+            <Button android:id="@+id/cmdBari" android:layout_column="2"
+                android:layout_width="85sp"  android:textSize="14sp"
+                android:layout_height="40sp"
+                android:text="New Bari"/>
+
+        </TableRow>
+        <TableRow android:gravity="left" android:background="#ffffff">
+
+            <TextView
+                android:layout_height="40sp"
+                android:layout_column="0"
+                android:layout_marginBottom="5sp"
+                android:layout_marginTop="5sp"
+                android:gravity="left"
+                android:text=" Bari"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+
+            <Spinner
+                android:id="@+id/spnBari" android:layout_column="1"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:layout_marginRight="10sp"
+                android:drawSelectorOnTop="true"
+                android:prompt="@string/planet_prompt"
+                android:textSize="25sp" />
+            <Button android:id="@+id/cmdHH" android:layout_column="2"
+                android:layout_width="85sp"  android:textSize="14sp"
+                android:layout_height="40sp"
+                android:text="New HH"/>
+
+        </TableRow>
+        <View android:layout_height="2dip" android:background="#00CD00" />
+        <TableRow android:gravity="left" >
+
+
+        </TableRow>
+    </TableLayout>
+
+
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
-<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">
+    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">
     <LinearLayout android:layout_marginLeft="10sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <LinearLayout android:id="@+id/secListView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
              <ListView android:scrollbars="vertical"
