--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -119,7 +119,7 @@
     </style>
 
     <style name="CustomDialogTheme" parent="@android:style/Theme.Dialog">
-        <item name="android:bottomBright">#fff</item>
+        <!--<item name="android:bottomBright">#fff</item>
         <item name="android:bottomDark">#fff</item>
         <item name="android:bottomMedium">#fff</item>
         <item name="android:centerBright">#fff</item>
@@ -128,7 +128,7 @@
         <item name="android:fullBright">#7D266A</item>
         <item name="android:fullDark">#7D266A</item>
         <item name="android:topBright">#2f6699</item>
-        <item name="android:topDark">#2f6699</item>
+        <item name="android:topDark">#2f6699</item>-->
     </style>
 
     <style name="spinner_style">
